feat: added ocr for plan extraction
